fix alerts CSS so that it's visible, center and add animation.

--- a/assets/css/components/_alerts.scss
+++ b/assets/css/components/_alerts.scss
@@ -1,10 +1,11 @@
 .alert {
-  width: 100%;
-  animation: fade-in-right .5s;
+  width: 40vw;
+  animation: fade-in-down .5s;
+  margin-top: 1vw;
 }
 .alert-received-bitcoin {
   background: white;
-  padding: 10px 20px;
+  padding: 20px;
   position: absolute;
   right: 12px;
   top: 12px;
@@ -12,7 +13,11 @@
   text-align: center;
   color: $success;
   max-width: 300px;
+  z-index: 10000;
+  animation: fade-in-right .5s;
+  box-shadow: 0 2px 3px 0 #676767;
   .close {
     right: -11px !important;
+    color: grey;
   }
 }
